Minor fixes in changelog

--- a/changelogs/0.2.0.md
+++ b/changelogs/0.2.0.md
@@ -7,7 +7,7 @@
 
 #### `RightBiasedEither`
 ```scala
-import kevinlee.fp.Implicits
+import kevinlee.fp.Implicits._
 
 val someEither: Either[String, Int] = Right(23)
 
@@ -27,7 +27,7 @@ for {
 
 #### `ToEither`
 ```scala
-import kevinlee.fp.Implicits
+import kevinlee.fp.Implicits._
 
 val someEither: Either[String, Int] = 123.right
 // Right(123
