--- a/changelogs/1.0.0.md
+++ b/changelogs/1.0.0.md
@@ -1,7 +1,7 @@
 ## [1.0.0](https://github.com/Kevin-Lee/just-fp/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aclosed+milestone%3A%22milestone6%22) - 2019-09-17
 
 ### Changed
-* The package has been renamed from `keivnlee` to `just`
+* The package has been renamed from `keivnlee` to `just` (#50)
   
   e.g.)
   ```scala
