Prepare to release 1.2.0

--- a/changelogs/1.1.0.md
+++ b/changelogs/1.1.0.md
@@ -13,7 +13,7 @@
   - [x] `String`
 
 * Add SemiGroup syntax (#56) <br>
-  Add |+| for SemiGroup for convenience.
+  Add `|+|` for SemiGroup for convenience.
 
 * Add more WriterT instances (#58) <br>
   Added:
